--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "knex migrate:latest",
     "dev": "node --watch main.js"
   },
   "keywords": [],
@@ -14,7 +15,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "knex": "^3.1.0"
+    "fs": "^0.0.1-security",
+    "knex": "^3.1.0",
+    "mysql2": "^3.10.2",
+    "node": "^22.4.0"
   }
 }
